fix: use 1rem for grid cell dimensions, and increase gap from 1px to 2px

--- a/platform/dashboard/src/client/components/GridCell.scss
+++ b/platform/dashboard/src/client/components/GridCell.scss
@@ -1,4 +1,4 @@
-$size: 1.125em;
+$size: 1rem;
 $label-size: 0.5625rem;
 
 @keyframes spin {
